--- a/shop-contract/contract/package.json
+++ b/shop-contract/contract/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.19.4"
+  },
+  "dependencies": {
+    "chai": "^4.4.0",
+    "ethers": "^6.9.2"
   }
 }
